--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1802,107 +1802,107 @@ stories:
   domain: http://www.moabtimes.com/
   link: https://moabtimes.com/2019/12/27/debate-team-hosts-red-rock-classic-with-star-wars-theme/
 images:
-- name: nazi-invasion-grafitti-woman-bangs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-grafitti-woman-bangs.jpg
-- name: crow-crow-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-mucha-mult.jpg
-- name: oldroad-old-road-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-really-hot.jpg
-- name: mediterranean-mediterranean-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-cinnamon-rolls.jpg
-- name: copper-circuit-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_35910144944_o.jpg
-- name: locked-up-steam-lock-up-steam-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-internet-numbers.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colored-circuits.png
-- name: amusement-park-amusement-park-2-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-green-zuma.jpg
-- name: paris-paris-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-mucha-mult.jpg
-- name: fence-fence-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-kand-two.jpg
-- name: copper-circuit-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-bletchley-computer-racks.jpg
-- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-- name: walled-garden-walled-garden-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-paper.jpg
-- name: eduardo-eduardo-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-brush.jpg
-- name: oldhousecars-house-old-cars-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colorful-dream.jpg
-- name: oldcabin-oldcabin-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-brush.jpg
-- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit.png
-- name: old-house-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-emily-carr.jpg
-- name: old-gas-pumps-oldgaspumps-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-neo-instinct.jpg
-- name: docks-docks-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-oily-mcoilface.jpg
-- name: nazi-invasion-trail-bridge-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-trail-bridge-walking.jpg
-- name: meadowbutterfly-meadow-butterfly-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-missle.jpg
-- name: status-berlin-status-berlin-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crafty-painting.jpg
-- name: gypsy-wagon-gypsywagon-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
-- name: dc-statue-dcstatue-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-graham-sutherland.jpg
-- name: oldbarn-oldbarn-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-clean-view.jpg
-- name: power-lines-power-lines-empty-space-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-emily-carr.jpg
-- name: oldhouse-oldhouse-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dry-skin.jpg
-- name: crow_alberto_giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_alberto_giacometti.jpg
-- name: gypsy-wagon-gypsywagon-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-spagetti-accident.jpg
-- name: cargo-ship-cargo-ship-on-sea.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea.jpg
-- name: oldtrain-oldtrain-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
-- name: old-door-lock-old-door-lock-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-satan-red.jpg
-- name: blossombar-crunch-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-24-99.jpg
-- name: stalin-time-going-to-dowtown-los-angeles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-going-to-dowtown-los-angeles.jpg
-- name: mosaic-face-mosaic-face-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sand-paper.jpg
-- name: berlinwall2-berlinwall-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dry-skin.jpg
-- name: border-crossing-bordercrossing-kand-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kand-two.png
-- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
-- name: oldhotel-oldhotel-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
-- name: berlinwall-DSC-0084-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-electricity.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
-- name: oldhotel-oldhotel-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-really-hot.jpg
-- name: rain-princess-IMG_6945.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
-- name: oldsmallboat-oldsmallboat-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kand-two.jpg
-- name: white-house-lawn-white-house-lawn-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-monet-one.jpg
-- name: gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
-- name: ellis-island-ellis-island-room-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-creativity.jpg
-- name: oldtrain-oldtrain-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alien-goggles.jpg
-- name: nyc-flag-nycflag-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-kand-two.jpg
+- name: berlinwall-DSC-0084-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alien-goggles.jpg
+- name: old-door-lock-old-door-lock-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-diego-rivera1.jpg
+- name: la-muse-city-skyline-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-skyline-bright.jpg
+- name: curtain-curtain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-collage.jpg
+- name: white-house-lawn-white-house-window-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-diego-rivera1.jpg
+- name: stories-dark-clouds-la-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dark-clouds-la-buildings.jpg
+- name: oldhousecars-house-old-cars-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-monet-one.jpg
+- name: dc-statue-dcstatue-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-neo-instinct.jpg
+- name: crow-crow-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crafty-painting.jpg
+- name: status-berlin-status-berlin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
+- name: mosaic-face-mosaic-face-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-post-modern.jpg
+- name: old-church-oldchurch-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-really-hot.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
+- name: sand-hand-sand-hand-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purple-pond.jpg
+- name: crow-crow-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
+- name: window-window-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-pond.jpg
+- name: art-museum-art-museum-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-wols.jpg
+- name: copper-circuit-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7162.jpg
+- name: aws-s3-stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+- name: school-clouds-church-clouds-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-free-woman.jpg
+- name: oldtrain-oldtrain-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-emily-carr.jpg
+- name: old-church-oldchurch-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-creativity.jpg
+- name: copper-circuit-colonial-solider-pointing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-colonial-solider-pointing.jpg
+- name: la-muse-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-adam-smith-edinburgh.jpg
+- name: server-cloud-server-racks-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-granite.jpg
+- name: amusement-park-amusement-park-2-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-granite.jpg
+- name: ellis-island-ellisisland-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-emily-carr.jpg
+- name: stories-christianity-under-construction-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-copper-circuit.jpg
+- name: border-fence-border-fence-on-hill-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-hot-spicy.jpg
+- name: power-lines-power-lines-empty-space-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-china-prop.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-5.JPG
+- name: birdhouse-birdhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-pablo-blue.jpg
+- name: old-door-lock-old-door-lock-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-asteroids.jpg
+- name: school-clouds-church-clouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-far-away.jpg
+- name: bordercrossing-bordercrossing-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crafty-painting.jpg
+- name: old-granary-field-granaryfield-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-dali.jpg
+- name: window-window-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-nazi-poster.jpg
+- name: store-on-corner-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-three.jpg
+- name: christianity-christianity-under-construction-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-paper.jpg
+- name: locked-up-steam-lock-up-steam-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-green-zuma.jpg
+- name: stalin-time-shipping-container-ship-sunny-day.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-container-ship-sunny-day.jpg
+- name: dragon-desert-desert-dragon-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-mucha-mult.jpg
+- name: old-granary-field-oldhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-space-pizza.jpg
+- name: copper-circuit-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-desert-road-mountains.jpg
+- name: meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+- name: containership-containership-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dali-three.jpg
+- name: walled-garden-walled-garden-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
+- name: old-church-oldchurch-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-rain.jpg
+- name: gypsy-wagon-gypsywagon-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
 ---
 Focus On Healthy Habits And Realistic Goals To Lose Weight In The New Year.&nbsp;Coping With The Challenges Of Mental Illness During The Holidays.&nbsp;Union Names Seniors Of The Month For November.&nbsp;Harrell Reflects On Time As Circuit Clerk.&nbsp;Packers Know They Won't Go Far In Playoffs Without Better Offensive Production.&nbsp;Tracy Area United Fund Hits Goal.&nbsp;Alice Louise McClaflin Parris.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;
